webapp/k8s/my-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybackend-deployment
  namespace: app
  labels:
    component: backend
    app: myapp

spec:
  template:
    metadata:
      name: mybackend-pod
      namespace: app
      labels:
        component: backend
        app: myapp

    spec:
      containers:
        - name: my-backend
          image: martal3szczynska:/mybackend:latest
          ports:
            - containerPort: 5000

  replicas: 1 # was 3
  selector:
    matchLabels:
      app: myapp
      component: backend
