webapp/k8s/my-frontend-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
    name: myfrontend-deployment
    labels:
        app: myapp
        type: frontend
        component: frontend

spec:
    template:
        metadata:
            name: myfrontend-pod
            labels:
                app: myapp
                type: frontend

        spec:
            containers:
                - name: myfrontend-container
                  image: martal3szczynska/myfrontend:latest
                  stdin: true
                  ports:
                    - containerPort: 3000

    replicas: 1 # was 3
    selector:
        matchLabels:
            app: myapp
            type: frontend
            component: frontend
