webapp/k8s/my-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mynginx-pod
  namespace: app
  labels:
    component: web
    app: myapp

spec:
  containers:
    - name: mynginx
      image: martal3szczynska/mynginx:latest
      ports:
        - containerPort: 80
