webapp/k8s/my-frontend-clusterip.yaml
apiVersion: v1
kind: Service

metadata:
  name: myfrontend-clusterip
  namespace: app
  labels:
    component: frontend
    app: myapp

spec:
  type: ClusterIP
  ports:
#    - targetPort: 3000
#      port: 80
    - port: 3000
        targetPort: 3000

  selector:
    app: myapp
    type: frontend
    component: frontend
