webapp/k8s/my-nginx-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginx-node-port
  namespace: app

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31000
  selector:
    component: web
    name: myapp
