webapp/k8s/myfrontend-service-clusterip.yaml
apiVersion: v1
kind: Service

metadata:
  name: myfrontend-clusterip

spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 80

  selector:
    app: my-app
    type: frontend
