webapp/k8s/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-service
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
        - path: /api/(.*)
          pathType: Prefix
          backend:
            service:
              name: mybackend-clusterip
              port:
                number: 5000
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: myfrontend-clusterip
              port:
                number: 80
